# zwallet

./: .dockerignore  .gitignore  .gitmodules  404.html  BUILD.md  CHANGELOG.md  CNAME  Cargo.toml  Dockerfile  ISSUE_TEMPLATE.md  LICENSE  LICENSE.md  Makefile.toml  README.md  build-android.sh  build-flatpak.sh  build-flutter-win.ps1  build-linux.sh  build-win.ps1  build.env  build.sh  build.yaml  codegen.sh  common.css  configure-and-build.sh  configure.sh  env.sh  index.html  index.json  index.xml  install-aab.sh  install-deps.sh  install-dev.sh  install-rust.sh  l10n.yaml  main.css  publish.md  pubspec.yaml  pubspec.yaml.tpl  sitemap.xml  (+3 more)
.github/workflows/: build-android.yml  build-appimage.yml  build-flatpak.yml  build-ios.yml  build-linux.yml  build-mac.yml  build-win.yml  build.yml  build_release.yml  builder-flatpak.yml  builder-linux.yml  builder-win.yml  builder.yml  main.yml  release-please.yml  release.yaml
account/: index.html  index.xml
account/add/: index.html
account/manager/: index.html
account/notes/: index.html
account/overview/: index.html
account/payment_uri/: index.html
account/restore/: index.html
account/sync/: index.html
account/transactions/: index.html
account/watch-only/: index.html
advanced/: index.html  index.xml
advanced/advanced-send/: index.html
advanced/auto-shield/: index.html
advanced/batch-save/: index.html
advanced/budget/: index.html
advanced/coin-control/: index.html
advanced/cold-storage/: index.html
advanced/custom_path/: index.html
advanced/db_encrypt/: index.html
advanced/iso/: index.html
advanced/keytool/: index.html
advanced/ledger/: index.html
advanced/multipay/: index.html
advanced/offline_signature/: index.html
advanced/pnl/: index.html
advanced/pool/: index.html
advanced/reset/: index.html
advanced/sub-account/: index.html
advanced/zwl/: index.html
android/: .gitignore  build.gradle  gradle.properties
android/app/: build.gradle
assets/: about.md  create_db.sql
build-scripts/: build-android.sh  build-appimage.sh  build-flatpak.sh  build-flatpak2.sh  build-linux.sh  build-linux2.sh  build-mac.sh  build-win.sh  build-win1.sh  build-win2.sh  clean-runner.sh
build-scripts/mac/: build-aarch64.sh  build-flutter.sh  build-mac.sh  build-x86_64.sh  codesign-mac.sh  download-params.sh  notarize-mac.sh  pkg-mac.sh
categories/: index.html  index.xml
changelog/: index.html  index.xml
changelog/v1.1/: index.html
contact/: index.html  index.xml
contact/list/: index.html
contact/manage/: index.html
contact/save/: index.html
content/: _index.md
content/advanced/: ledger.md
content/changelog/: _index.md
content/faq/: seed.md  spam.md
content/getting-started/: send.md
content/installation/: _index.md
docker/: Dockerfile  Dockerfile-builder  Dockerfile-builder-flatpak  Dockerfile-builder-linux  Dockerfile-builder-win  Dockerfile-dev  Dockerfile-flatpak  Dockerfile-linux  Dockerfile-ubuntu  Dockerfile-win  flatpak-build.sh  zwallet-sample.jks  zwallet.jks
docs/: index.html  index.xml
docs/_print/: index.html
docs/account/: index.html  index.xml
docs/advanced/: index.html  index.xml
docs/contact/: index.html  index.xml
docs/getting-started/: index.html  index.xml
docs/messages/: index.html  index.xml
docs/release_notes/: index.html
docs/settings/: index.html  index.xml
download/: index.html
faq/: index.html  index.xml
faq/seed/: index.html
faq/spam/: index.html
features/: index.html  index.xml
getting-started/: index.html  index.xml
getting-started/account-summary/: index.html
getting-started/first-account/: index.html
getting-started/private_tx/: index.html
getting-started/receive/: index.html
getting-started/send/: index.html
getting-started/synchronization/: index.html
getting-started/ui_mode/: index.html
idl/: build.sh  data.fbs  vote.fbs
installation/: index.html  index.xml
ios/: Podfile  index.html  info.plist
ios/Runner/: AppDelegate.swift  Info.plist  Info.plist.tpl  PrivacyInfo.xcprivacy  Runner-Bridging-Header.h
ios/Runner.xcodeproj/: project.pbxproj
ios/certs/: Certificates.p12  YWallet_AppStore.mobileprovision
js/: hugo-learn.js
lib/: about.dart  account.dart  account_manager.dart  accounts.dart  accounts_old.dart  animated_qr.dart  appsettings.dart  avatar.dart  backup.dart  budget.dart  chart.dart  contact.dart  db.dart  devmode.dart  dualmoneyinput.dart  history.dart  home.dart  init.dart  keytool.dart  main.dart  main.reflectable.dart  message.dart  message_item.dart  multisend.dart  multisign.dart  multisign.dart.bak  note.dart  payment_uri.dart  pools.dart  qrscanner.dart  rescan.dart  reset.dart  restore.dart  router.dart  scantaddr.dart  send.dart  settings.dart  settings.pb.dart  settings.pbjson.dart  settings.pbserver.dart  (+12 more)
lib/coin/: btc.dart  coin.dart  coins.dart  ycash.dart  ycashtest.dart  zcash.dart  zcashtest.dart
lib/l10n/: index.js  intl_en.arb  intl_es.arb  intl_fa.arb  intl_fr.arb  intl_french.arb  intl_id.arb  intl_pt.arb  intl_ru.arb  intl_zh.arb  package.json  placeholder.arb
lib/pages/: dblogin.dart  encrypt.dart  input_widgets.dart  messages.dart  new_widgets.dart  scan.dart  settings.dart  showqr.dart  splash.dart  tx.dart  ui.md  (+3 more)
linux/: CMakeLists.txt  my_application.cc
messages/: index.html  index.xml
misc/: AppImageBuilder.yml  PKGBUILD  Vagrantfile  app.json  me.hanh.zwallet.Ywallet.yml  vagrant-install.sh  ywallet.desktop  ywallet.metainfo.xml
native/warp_api_ffi/: Cargo.toml  binding.h  binding2.h  build.rs  zec.db
native/warp_api_ffi/src/: api.rs  lib.rs
privacy_policy/: index.html
proto/: settings.proto
release_notes/: index.html
rust/: Cargo.toml
rust/src/: coin.rs  db.rs  frb_generated.rs  lib.rs
rust/src/api/: cdb.rs  mod.rs  simple.rs
rust_builder/: pubspec.yaml
search/: index.html
settings/: index.html  index.xml
static/: youtube.js
tags/: index.html  index.xml
test/: widget_test.dart
views/: index.html  index.xml
warp/: index.html  index.xml
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+148 files in other folders)
