[workspace]
members = ["native/*"]

[profile.release]
lto = true
codegen-units = 1
debug = false

#[patch."https://github.com/hhanh00/zcash-params.git"]
#zcash_params = { path = "native/zcash-params" }

#[patch."https://github.com/hhanh00/librustzcash.git"]
#zcash_client_backend = { path = "librustzcash/zcash_client_backend" }
#zcash_primitives = { path = "librustzcash/zcash_primitives" }
#zcash_proofs = { path = "librustzcash/zcash_proofs" }
#zcash_address = { path = "librustzcash/components/zcash_address" }
#zcash_encoding = { path = "librustzcash/components/zcash_encoding" }
#zcash_note_encryption = { path = "librustzcash/components/zcash_note_encryption" }

[patch.crates-io]
#zcash_note_encryption = { path = "librustzcash/components/zcash_note_encryption" }
zcash_note_encryption = { git = "https://github.com/hhanh00/librustzcash.git", rev = "7469d70261e8e72f2bbf3163704ddf8fd825b1aa" }
jubjub = { git = "https://github.com/hhanh00/jubjub.git", rev = "4a3edf3d242f368b5aa418ec659d01f191127cf3" }
