[workspace]
members = ["native/*"]

[profile.release]
lto = true
codegen-units = 1
debug = false

#[patch."https://github.com/hhanh00/zcash-params.git"]
#zcash_params = { path = "native/zcash-params" }

#[patch."https://github.com/hhanh00/librustzcash.git"]
#zcash_client_backend = { path = "librustzcash/zcash_client_backend" }
#zcash_primitives = { path = "librustzcash/zcash_primitives" }
#zcash_proofs = { path = "librustzcash/zcash_proofs" }
#zcash_address = { path = "librustzcash/components/zcash_address" }
#zcash_encoding = { path = "librustzcash/components/zcash_encoding" }
#zcash_note_encryption = { path = "librustzcash/components/zcash_note_encryption" }

[patch.crates-io]
#zcash_note_encryption = { path = "librustzcash/components/zcash_note_encryption" }
zcash_note_encryption = { git = "https://github.com/hhanh00/librustzcash.git", rev = "f39dd6c2af20662fd1aaa9e00172efebd3435ff4" }
jubjub = { git = "https://github.com/hhanh00/jubjub.git", rev = "4a3edf3d242f368b5aa418ec659d01f191127cf3" }

# Android 32-bit fix
halo2_gadgets  = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }
halo2_proofs = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }
orchard = { git = "https://github.com/zcash/orchard.git", rev = "6cbde279e90974201bedbd9b5ddf155e8f8b1e8e" }
