[package]
name = "rust_lib_YWallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
anyhow = "1.0.95"
tracing = "0.1.41"
hex = "0.4"
rusqlite = { version = "0.29.0", features = ["bundled", "modern_sqlite", "backup"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
reqwest = { version = "0.11.27", default-features = false, features = ["json", "rustls-tls"] }
lazy_static = "1.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.34.0"
rand_core = "0.6.4"
orchard = "0.3.0"

zcash-vote = { path = "../native/zcash-vote" }

[features]
dart_ffi = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.dev]
opt-level = 3
debug = true
