[package]
name = "warp_api_ffi"
version = "0.1.0"
authors = ["Hanh <hanh425@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "warp_api_ffi"
crate-type = ["rlib"]

[dependencies]
sync = { path = "../zcash-sync" }
zcash_multisig = { path = "../zcash-multisig" }
tokio = { version = "1.7.1", features = ["macros", "rt-multi-thread"] }
android_logger = "0.10.0"
anyhow = "1.0.41"
log = "0.4.14"
allo-isolate = "0.1.8-beta"
once_cell = "1.8.0"
hex = "0.4.3"

[dependencies.zcash_primitives]
git = "https://github.com/hhanh00/librustzcash.git"
rev = "67689473e4edbfbd6d2ff33f6ddd5dd2a402bb20"

[build-dependencies]
cbindgen = "0.19.0"
